# TradingBots

./: .gitignore  TradingBots.code-workspace
FluxTrader/: CLAUDE.md  main.py  mkdocs.yml  pyproject.toml
FluxTrader/backtest/: __init__.py  engine.py  report.py  slippage.py  wfo.py
FluxTrader/configs/: base.yaml  botti.yaml  botti_backtest_mtf.yaml  botti_backtest_nomtf.yaml  botti_pair.yaml  ict_ob_bybit_crypto_backtest.yaml  ict_ob_bybit_crypto_live.yaml  ict_ob_crypto_live.yaml  ict_ob_futures_live.yaml  ict_ob_live.yaml  obb_backtest.yaml  obb_live.yaml  orb_backtest copy.yaml  orb_backtest.yaml  orb_live.yaml  orb_live_ibkr.yaml  orb_paper.yaml  quick_flip.yaml  quick_flip_backtest.yaml  quick_flip_live.yaml
FluxTrader/core/: __init__.py  config.py  context.py  filters.py  indicators.py  logging.py  ml_filter.py  models.py  risk.py  trade_manager.py
FluxTrader/dashboard/: __init__.py  app.py
FluxTrader/data/: __init__.py
FluxTrader/docs/: CHANGELOG.md  architecture.md  backtest.md  bot_registry.md  config.md  eigene Notizen.txt  index.md  live.md  monitoring.md  quickstart.md
FluxTrader/execution/: __init__.py  alpaca_adapter.py  bybit_adapter.py  contract_factory.py  ibkr_adapter.py  paper_adapter.py  port.py
FluxTrader/fluxtrader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
FluxTrader/fluxtrader_data/: fluxtrader.db  state.db
FluxTrader/live/: __init__.py  anomaly.py  health.py  health_eval.py  metrics.py  notifier.py  pair_runner.py  runner.py  scanner.py  scheduler.py  state.py
FluxTrader/site/: 404.html  index.html
(+132 files in other folders)
